--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Template repository for JS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"format": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,13 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "standard": "^14.3.1"
-  }
+  },
+	"lint-staged": {
+		"*.js": ["npm run format", "git add"]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	}
 }
